--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -9,7 +8,7 @@
 		<div id="container"></div>
 
 		<video id="video" loop muted crossOrigin="anonymous" webkit-playsinline style="display:none">
-			<source src="https://kdementiev-reinvently.github.io/video.mp4">
+			<source src="https://assets.cameraiq.co/webpreview/webpreview2_small_0.5.mp4">
 		</video>
 
 		<script type="module">
@@ -99,29 +98,25 @@
 
 			function load() {
 				var loader = new GLTFLoader();
-					loader.load( 'https://kdementiev-reinvently.github.io/face-scene.glb', function ( gltf ) {
+					loader.load( 'https://threejs.org/examples/models/gltf/Soldier.glb', function ( gltf ) {
 						model = gltf.scene;
-
-						var planeMesh = model.children[0];
-						var material = planeMesh.material
 
 						scene.add( model );
 
 						var scaling = 15.0;
-
+				
 						model.scale.set(scaling,scaling,-scaling);
+						model.position.set(0, -10, scaling);
 
-						// model.position.set(0, -10, scaling);
+						mixer = new THREE.AnimationMixer( model );
 
-						// mixer = new THREE.AnimationMixer( model );
+						animation = gltf.animations[1];
 
-						// animation = gltf.animations[1];
+						action = mixer.clipAction(animation);
 
-						// action = mixer.clipAction(animation);
-
-						// action.clampWhenFinished = true;
-						// action.loop = THREE.LoopRepeat;
-						// action.play();
+						action.clampWhenFinished = true;
+						action.loop = THREE.LoopRepeat;
+						action.play();
 
 						// createGUI( model, gltf.animations );
 					}, undefined, function ( e ) {
