--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div id="videoTime">Video time: </div>
 		<div id="animationTime">Animation time: </div>
 
-		<video id="video" loop muted crossOrigin="anonymous" style="display:none">
+		<video id="video" loop muted crossOrigin="anonymous" webkit-playsinline style="display:none">
 			<source src="https://raw.githubusercontent.com/kdementiev-reinvently/kdementiev-reinvently.github.io/master/video.mp4">
 		</video>
 
